--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='trackingMethod: best;'>
+        <a-assets>
+          <img id="poster" src="poster.jpg">
+        </a-assets>
         <a-anchor hit-testing-enabled='true'>
-          <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+            <a-image rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
         </a-anchor>
       <a-camera-static/>
     </a-scene>
