--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='trackingMethod: best;'>
-        <a-assets>
-          <img id="poster" src="poster.jpg">
-        </a-assets>
-        <a-anchor hit-testing-enabled='true'>
-            <a-image rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
-        </a-anchor>
-      <a-camera-static/>
-    </a-scene>
+    <a-scene embedded  arjs='trackingMethod: best; debugUIEnabled: false;' >
+      <a-assets>
+        <img id="poster" src="poster.jpg">
+      </a-assets>
+      <a-anchor hit-testing-enabled='true'>
+          <a-image scale="3 4 4" rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
+      </a-anchor>
+    <a-camera-static/>
+  </a-scene>
   </body>
 </html>
