--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
-  </head>
-<style>
-  .button {
-    position: fixed;
-    width: 32vw;
-    text-align: right;
-    z-index: 1;
-    background: blue;
-    padding: 1em;
-    color: #fff;
-    outline: none;
-  }
-
-  .quote {
-    bottom: 75px;
-  }
-
-  .group {
-    bottom: 10px;
-  }
-</style>
+<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;'>
-      <a-assets>
-        <img id="poster" src="poster.jpg">
-      </a-assets>
-      <a-anchor hit-testing-enabled='true'>
-          <a-image scale="4.5 6 6" rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
-      </a-anchor>
-    <a-camera-static/>
-  </a-scene>
-  <button class="button quote">Design Challenge</button>
-  <button class="button group">Doelgroep</button>
-  <script src="script.js"></script>
+    <a-scene embedded arjs='trackingMethod: best;'>
+        <a-assets>
+          <img id="poster" src="poster.png">
+        </a-assets>
+        <a-anchor hit-testing-enabled='true'>
+            <a-image rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
+        </a-anchor>
+      <a-camera-static/>
+    </a-scene>
   </body>
 </html>
