--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <img id="poster" src="poster.png">
         </a-assets>
         <a-anchor hit-testing-enabled='true'>
-            <a-image rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
+            <a-image scale="3 4 4" rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
         </a-anchor>
       <a-camera-static/>
     </a-scene>
