--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;'>
         <a-assets>
-          <img id="poster" src="poster.png">
+          <img id="poster" src="poster.jpg">
         </a-assets>
         <a-anchor hit-testing-enabled='true'>
             <a-image scale="3 4 4" rotation="-90 0 0" position="0 0 0" src="#poster"></a-image>
